--- a/straterion.cabal
+++ b/straterion.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e9067a4179569cf69a647f0b2475aa2b1b93a930d4f0562e3915abe98296957e
+-- hash: dbe86c439132453b3f7e2259da223db3403fbe1ab3a8bf7c7890ebe25b7289b7
 
 name:           straterion
 version:        0.1.0.0
@@ -27,13 +27,17 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Game
+      Globals
+      State
   other-modules:
       Paths_straterion
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , gloss
+    , gloss-juicy >=0.2.3
   default-language: Haskell2010
 
 executable straterion-exe
@@ -45,18 +49,7 @@ executable straterion-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , straterion
-  default-language: Haskell2010
-
-test-suite straterion-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_straterion
-  hs-source-dirs:
-      test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
+    , gloss
+    , gloss-juicy >=0.2.3
     , straterion
   default-language: Haskell2010
