--- a/straterion.cabal
+++ b/straterion.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dbe86c439132453b3f7e2259da223db3403fbe1ab3a8bf7c7890ebe25b7289b7
+-- hash: 7b7023998055ae726fdde5e1ed7597b182b6eea62553ff75def005e0e859e90d
 
 name:           straterion
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Game
       Globals
+      Input
       State
   other-modules:
       Paths_straterion
